clusters/talos-cluster/voice/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-route
  namespace: voice
spec:
  parentRefs:
    - name: cloudflare-gateway
      namespace: cloudflare-gateway
  hostnames:
    - "voice-api.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: voice-api
          port: 7171
